--- a/frontend/src/Pages/ManagerDashboard/ViewUser/ViewUser.css
+++ b/frontend/src/Pages/ManagerDashboard/ViewUser/ViewUser.css
@@ -42,3 +42,33 @@
 .detailPage>div>div{
     width: 90%;
 }
+.DetailImage{
+    width: 25vw;
+    height: 38vw;
+    margin: auto;
+}
+.ADDUserCardImage>div{
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    border: 2px solid black;
+    margin: 2%;
+    height: 40vw;
+}
+.verifiedicon{
+    font-size: 1.5vw;
+    color: rgb(14, 233, 14);
+}
+.unverifiedicon{
+    font-size: 1.5vw;
+    color: red;
+}
+.viewUserHead{
+    display: grid;
+    grid-template-columns: 5fr 1fr;
+    align-items: center;
+}
+.verifyButton{
+    background: brown;
+    color: white;
+}
