manager dashboar completed

--- a/frontend/src/Pages/ManagerDashboard/ViewUser/ViewUser.css
+++ b/frontend/src/Pages/ManagerDashboard/ViewUser/ViewUser.css
@@ -69,6 +69,6 @@
     align-items: center;
 }
 .verifyButton{
-    background: brown;
-    color: white;
+    background: brown !important;
+    color: white !important;
 }
