--- a/frontend/src/Pages/ManagerDashboard/Dashboard/Dashboard.css
+++ b/frontend/src/Pages/ManagerDashboard/Dashboard/Dashboard.css
@@ -26,7 +26,7 @@
     font-size: 4vw;
 }
 .dashboardCard:hover{
-    background-color: brown;
+    background-color: black;
     color: white !important;
 }
 .dashboardCard h2{
