--- a/frontend/src/Pages/ManagerDashboard/ManagerDashboard.css
+++ b/frontend/src/Pages/ManagerDashboard/ManagerDashboard.css
@@ -30,10 +30,11 @@
     height:auto;
 }
 .circle{
-    width:2.5rem;
-    height:2.5rem;
+    width: 3.5rem;
+    height: 3.5rem;
     border-radius: 50%;
     background-color: #EAEBEF;
+    margin: 0 2%;
 }
 .sideContent{
     grid-area: sideC;
